--- a/index.html
+++ b/index.html
@@ -1,1 +1,165 @@
-protocall
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Hafizferanmi &middot; A yound tech enthusiast</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <script type="applisalonion/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!-- Custom Theme files -->
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+    <link href="css/style.css" rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" href="css/swipebox.css">
+    <link href="css/font-awesome.min.css" rel='stylesheet' type='text/css' />
+    <!--//Custom Theme files-->
+    <!--web-font-->
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Merriweather+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <!--//web-font-->
+    <script src="js/jquery.min.js"></script>
+</head>
+
+<body>
+    <!--banner-->
+    <div class="banner">
+        <div class="container">
+            <div class="col-md-4 b-part2">
+                <h3>Contact</h3>
+                <h4><a href="mailto:hafizferanmi@gmail.com">hafizferanmi@gmail.com</a></h4>
+                <h4 class="agile">+234-7034-6436-85</h4>
+                <h4>OAU Ile-ife, Nigeria</h4>
+            </div>
+            <div class="col-md-4 b-part3">
+                <h3>Follow</h3>
+                <a href="http://facebook.com/hafizferanmi"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="http://twitter.com/hafizferanmi"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/hafiz-feranmi-806839103/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a href="http://instagram.com/hafizferanmi"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-md-4 b-part4">
+                <h3>Visit</h3>
+                <a href="https://www.linkedin.com/in/hafiz-feranmi-806839103/n.com/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <h4>Check linkedin to know all about hafizferanmi including projects, teams, organizations, associatons and all.</h4>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <!--//banner-->
+    <!--about-->
+    <div class="about">
+        <div class="container">
+            <h3>About Hafizferanmi</h3>
+            <label class="line"></label>
+            <img src="images/1.jpg" alt=" hafizferanmi " />
+            <p class="text-info">I'm a young, interesting to be with software developer currently based in Nigeria. I love everything that has to do with Web design & development, Graphic design, Packaging, technology, programming and I feel a true devotion for typography and use of pictures in design. I have 3 years of experience working as a with different web technologies, would love to visit other countries & work for software engineering company! I love working with people, specially if they have the same passion I have for what they do. Why don't we work together?</p>
+        </div>
+    </div>
+    <!--//about-->
+    <!--skills-->
+    <div class="skills">
+        <div class="container">
+            <h3>Development skills</h3>
+            <label class="line"></label>
+            <div class="col-md-6 skills-left">
+                <h4>Software Development skills</h4>
+                <p>Being a while working with different programming language and have got a grasp of few, become professional and expert in languages i use well</p>
+                <p> Programming langauges and framworks I use well in which i have gotten to a level of professionalism are listed on the right hand side with a scale to show the level of expertise. </p>
+            </div>
+            <div class="col-md-6 skills-right">
+                <div class="bar_group">
+                    <div class='bar_group__bar thin' label='HTML and CSS' show_values='false' tooltip='false' value='410'></div>
+                    <div class='bar_group__bar thin' label='Bootstrap' show_values='false' tooltip='false' value='430'></div>
+                    <div class='bar_group__bar thin' label='Javascript' show_values='false' tooltip='false' value='470'></div>
+                    <div class='bar_group__bar thin' label='PHP' show_values='false' tooltip='false' value='475'></div>
+                    <div class='bar_group__bar thin' label='Laravel' show_values='false' tooltip='false' value='400'></div>
+                    <div class='bar_group__bar thin' label='NOde js' show_values='false' tooltip='false' value='400'></div>
+                    <div class='bar_group__bar thin' label='Angular js' show_values='false' tooltip='false' value='420'></div>
+                </div>
+                <script src="js/bars.js"></script>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    <!--/skills-->
+    <div class="cer">
+        <div class="container">
+            <h2>Education and Certifications</h2>
+            <label class="line"></label>
+            <div class="col-md-6 col-md-offset-4">
+                <section class="nino-education wow animated fadeInRight" id="certification">
+                    <div class="nino-sectionContent">
+                        <ul>
+                            <li>
+                                <div class="date">From JULY 2012 to September 2012</div>
+                                <div class="regency text-bold">Computer basic maintenance and repair</div>
+                                <div class="location">Computer Resource Center(CRC), IITA.</div>
+                            </li>
+                            <li>
+                                <div class="date">From dec 2013 to July 2014</div>
+                                <div class="regency text-bold">WEB DESIGN AND DEVELOPMENT</div>
+                                <div class="location">Young black enterprenuers, IBADAN</div>
+                            </li>
+                            <li>
+                                <div class="date">From April 2014 to July 2014</div>
+                                <div class="regency text-bold">Networking engineering</div>
+                                <div class="location">landmark ICT, Sijuwola house, Dugbe, Ibadan.</div>
+                            </li>
+                            <li>
+                                <div class="date">From 2013 to 2013</div>
+                                <div class="regency text-bold">Computer Appreciation.</div>
+                                <div class="location">Obafemi Awolowo university</div>
+                            </li>
+                            <li>
+                                <div class="date">From july 2016 to august 2016</div>
+                                <div class="regency text-bold">Cyber security</div>
+                                <div class="location">Organized by IBM, OAU Ile-ife.</div>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
+    <div class="contact">
+        <div class="">
+            <div class="container">
+                <h3>Contact</h3>
+                <label class="line"></label>
+                <div class="col-md-4 c-w3l text-black">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
+                    <h4>Obafemi Awolowo University</h4>
+                    <h4>Ile-ife, NIGERIA</h4>
+                </div>
+                <div class="col-md-4 c-w3l c-mail text-black">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    <h4><a href="mailto:hafizferanmi@gmail.com">hafizferanmi@gmail.com</a></h4>
+                    <h4><a href="mailto:hafizferanmi@outlook.com">hafizferanmi@outlook.com</a></h4>
+                </div>
+                <div class="col-md-4 c-w3l c-phn text-black">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                    <h4>+234-7034-6436-85</h4>
+                    <h4>+234-9075-0585-63</h4>
+                </div>
+                <div class="clearfix"></div>
+                <form action="#" method="post">
+                    <input type="text" name="name" class="name" placeholder="Your Name" required="">
+                    <input type="text" name="email" class="email" placeholder="Your Email" required="">
+                    <textarea name="your message" placeholder="Your Message" required=""></textarea>
+                    <input type="submit" value="Send Message">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!--//contact-->
+    <!--footer-->
+    <div class="footer-agileinfo">
+        <p> &copy; 2016 hafizferanmi. All Rights Reserved</a>
+        </p>
+    </div>
+    <!--//footer-->
+    <!--common js-->
+    <script src="js/bootstrap.min.js"></script>
+    <!--//common js-->
+</body>
+
+</html>
